# spark_playground

./: delta_lake.ipynb  hudi.ipynb  pyproject.toml
data/hudi/rand_nums/: ..hoodie_partition_metadata.crc  .02b38239-d376-4ac0-ab52-f7091a243022-0_7-17-106_20230405104341659.parquet.crc  .06ba91c5-ec23-4831-b927-7f09fd97c26d-0_3-17-102_20230405104341659.parquet.crc  .0c5bc5c4-66d4-4548-af16-e50d5c45b356-0_4-17-103_20230405104341659.parquet.crc  .535bc676-d459-4140-a0a4-3f66148f46be-0_6-17-105_20230405104341659.parquet.crc  .57ce6074-5389-4215-9b05-8fdab2daa629-0_5-17-104_20230405104341659.parquet.crc  .5a9493f0-ae95-468e-915e-53707e6a69de-0_8-17-107_20230405104341659.parquet.crc  .61b5340c-b753-4326-9ff1-def6019b4771-0_0-17-99_20230405104341659.parquet.crc  .b3bf0ac3-5b6a-4c10-a919-c7738feb813d-0_1-17-100_20230405104341659.parquet.crc  .d58c6524-e4fd-4770-8a53-0d5d9bd01fc4-0_2-17-101_20230405104341659.parquet.crc  .hoodie_partition_metadata  02b38239-d376-4ac0-ab52-f7091a243022-0_7-17-106_20230405104341659.parquet  06ba91c5-ec23-4831-b927-7f09fd97c26d-0_3-17-102_20230405104341659.parquet  0c5bc5c4-66d4-4548-af16-e50d5c45b356-0_4-17-103_20230405104341659.parquet  535bc676-d459-4140-a0a4-3f66148f46be-0_6-17-105_20230405104341659.parquet  57ce6074-5389-4215-9b05-8fdab2daa629-0_5-17-104_20230405104341659.parquet  5a9493f0-ae95-468e-915e-53707e6a69de-0_8-17-107_20230405104341659.parquet  61b5340c-b753-4326-9ff1-def6019b4771-0_0-17-99_20230405104341659.parquet  b3bf0ac3-5b6a-4c10-a919-c7738feb813d-0_1-17-100_20230405104341659.parquet  (+1 more)
(+20 files in other folders)
