[tool.poetry]
name = "spark-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "spark_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pyspark = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
